developer/src/kmc-package/test/fixtures/invalid/error_package_must_contain_a_model_or_a_keyboard.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Info>
    <Name URL="">error_package_must_contain_a_model_or_a_keyboard</Name>
    <Version>1.3</Version>
  </Info>
  <Files>
    <File>
      <!-- error_package_must_contain_a_model_or_a_keyboard.  -->
      <Name>example.txt</Name>
      <Description>Example text file</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.txt</FileType>
    </File>
  </Files>
</Package>
